--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ nav{
     display: flex;
     padding: 1.5% 2%; /*størrelse på heading!!!!*/
     justify-content: space-between;
-    align-items: center;
     position: relative;
+    
 }
 
 nav img{
@@ -86,12 +86,32 @@ nav img{
     font-family: 'inconsolata';
 }
 
-.nav-links a:hover{
-    color: rgb(206, 206, 206);
+.nav-links ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #ffffff;
+    display: block;
+    margin: auto;
+    transition: 0.3s;
 }
 
-.nav-links a:focus{
-    color: rgb(206, 206, 206);
+.nav-links ul li:focus{
+    width: 100%;
+}
+
+.nav-links ul li:hover::after{
+    width: 100%;
+}
+
+.text-box{
+    width: 90%;
+    color: #ffffff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
 }
 
 nav .fa{
@@ -99,6 +119,10 @@ nav .fa{
 }
 
 @media(max-width: 700px){
+
+    nav{
+        align-items: center;
+    }
 
     .nav-links ul li::after{
         height: 0px;
@@ -112,10 +136,14 @@ nav .fa{
         width: 170px;
         top: 0;
         right: -200px;
-        text-align: center;
         z-index: 2;
         transition: 0.8s;
+        text-align: left;
 
+    }
+
+    .nav-links a{
+        padding-left: 30px;
     }
 
     nav .fa{
@@ -125,13 +153,7 @@ nav .fa{
         font-size: 22px;
         cursor: pointer;
     }
-    .nav-links ul{
-        padding: 15px 25px;
-    }
-
-    .nav-links li{
-        margin-bottom: 20px;
-    }
+    
     html, body {overflow-x: hidden;}
 
     nav .fa-xmark{
@@ -185,6 +207,15 @@ nav .fa{
     font-family: 'oswald';
     font-weight: 100;
     word-spacing: 10px;
+}
+
+.tekstIndex a{
+    font-family: 'oswald';
+    font-weight: 100;
+    font-size: 20px;
+    word-spacing: 10px;
+    text-decoration: none;
+    color: white;
 }
 
 
